# dnaReader

./: .gitignore  CMakeLists.txt  aminoAcidsSequence.txt  elements.db  main.cpp  makefile  molecules.db  reader.cpp  reader.h  stringHeader.h  stringMethods.cpp
assets/samples/: igf1.txt
data/: aminoAcids.sql  bonds.sql  elements.sql  molecules.sql
include/: maths.h  molecules.h  shader.h  stringHeader.h  templates.tpp  window.h
includes/databases/: aminoAcids.sql  elements.sql  molecules.sql
includes/headers/: molecules.h  reader.h
src/: main.cpp  maths.cpp  moleculeBuilder.cpp  molecules.cpp  reader.cpp  shader.cpp  sqlMethods.cpp  window.cpp
